GNOME Bugzilla – Bug 694801
fullscreen applications cannot be rendererd (they disappear as soon as they get focus)
Last modified: 2013-02-27 17:01:11 UTC
Created attachment 237535 [details] [review] metaWindow get_all_monitors takes a mandatory parameter metaWindow get_all_monitors takes a mandatory parameter which is missing in js/ui/layout.js (this parameter can be null). Gnome shell error out with: JS ERROR: !!! Exception was: Error: Unsupported type guint64 for (out caller-allocates) JS ERROR: !!! message = '"Unsupported type guint64 for (out caller-allocates)"' JS ERROR: !!! fileName = '"/opt/gnome/share/gnome-shell/js/ui/layout.js"' JS ERROR: !!! lineNumber = '889' JS ERROR: !!! stack = '"()@/opt/gnome/share/gnome-shell/js/ui/layout.js:889 wrapper()@/opt/gnome/share/gjs-1.0/lang.js:213 ([object GObject_Object])@/opt/gnome/share/gnome-shell/js/ui/layout.js:905 wrapper([object GObject_Object])@/opt/gnome/share/gjs-1.0/lang.js:213 Fixes commit a361180745f6e135ebba0b4c7551bab2551dc834 .
Review of attachment 237535 [details] [review]: Sorry, but this patch is wrong. That argument is the length of the returned array. The actual problem is the (caller-allocates) annotation, which is wrong (it makes sense for structures only), and should be removed.
Created attachment 237538 [details] [review] MetaWindow: fix annotation caller-allocates makes sense only for structure, and gjs will complain if used on anything else
Please test, I'm currently a few revisions behind on the updates...
Review of attachment 237538 [details] [review]: Ha! Attaching untested patches is cheating ;-) I was about to attach the same (tested!) patch, so go head ...
Attachment 237538 [details] pushed as e6d5e98 - MetaWindow: fix annotation